Bug 484457 - Define Status int breaks OSX builds when including MachineExceptions.h. r=vlad